--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel = ”stylesheet” href = ”https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css”>
+    <link rel="stylesheet" href="style.css">
+    <title>SHOP ONLINE</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <section class="container-fluid">
+            <div>
+                <a class="navbar-brand" href="index.html">SHINE | SHOP ONLINE</a>
+            </div>
+            <div class="d-flex">
+                <button id="open" type="button" class="btn btn-light"> <img src="img/cart3.svg" class ="carrito" alt="carrito"></button>
+        </section>
+    </nav>
+
+    <div class="modal-container" id="modal_container">
+        <div class="modal">
+            <h1>CARRITO</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur minus dicta nemo hic temporibus commodi nisi blanditiis optio magni! Eum, quis est id officiis voluptates quasi adipisci blanditiis ullam vel.
+            </p>
+            <button id="close">Cerrar</button>
+        </div>
+    </div>
+
+<main id="productos">
+
+</main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="stock.js" type="module"></script>
+    <script src="app.js" type="module"></script>
+    <script src="modal.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
