--- a/index.html
+++ b/index.html
@@ -17,23 +17,26 @@
             </div>
             <div class="d-flex">
                 <button id="open" type="button" class="btn btn-light"> <img src="img/cart3.svg" class ="carrito" alt="carrito"></button>
+            </div>
         </section>
     </nav>
 
-    <div class="modal-container" id="modal_container">
-        <div class="modal">
-            <h1>CARRITO</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur minus dicta nemo hic temporibus commodi nisi blanditiis optio magni! Eum, quis est id officiis voluptates quasi adipisci blanditiis ullam vel.
+    <section class="modal-container " id="modal_container">
+        <article class="modal-carrito">
+        <img src="img/x.svg" alt="close" id="close">
+        <article class="detalleCarrito">
+            <h3>CARRITO</h3>
+            <p class="precioProducto">Precio total: $<span id="precioTotal"></span>
             </p>
-            <button id="close">Cerrar</button>
-        </div>
-    </div>
+        </article>
+    </section>
+
 
 <main id="productos">
 
 </main>
 
-
+<img src="./img/aguamicelar.jpg" alt="">
 
 
 
