--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section class="modal-container " id="modal_container">
         <article class="modal-carrito">
-        <img src="img/x.svg" alt="close" id="close">
+        <img src="img/x-circle.svg" alt="close" id="close">
         <article class="detalleCarrito">
             <h3>CARRITO</h3>
             <p class="precioProducto">Precio total: $<span id="precioTotal"></span>
@@ -46,8 +46,9 @@
 
 
 
-    <script src="stock.js" type="module"></script>
+    
     <script src="app.js" type="module"></script>
+    <script src="stock.js" type="module"></script>
     <script src="modal.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
