--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel = ”stylesheet” href = ”https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css”>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    
     <title>SHOP ONLINE</title>
 </head>
 <body>
@@ -16,19 +19,34 @@
                 <a class="navbar-brand" href="index.html">SHINE | SHOP ONLINE</a>
             </div>
             <div class="d-flex">
-                <button id="open" type="button" class="btn btn-light"> <img src="img/cart3.svg" class ="carrito" alt="carrito"></button>
+                <button id="open" type="button" class="btn btn-light"> <img src="img/cart3.svg" class ="carrito" alt="carrito"><span id="contador-carrito"></span></button>
             </div>
         </section>
     </nav>
 
-    <section class="modal-container " id="modal_container">
-        <article class="modal-carrito">
-        <img src="img/x-circle.svg" alt="close" id="close">
-        <article class="detalleCarrito">
-            <h3>CARRITO</h3>
-            <p class="precioProducto">Precio total: $<span id="precioTotal"></span>
+    <section class="modal-container" id="modal_container">
+        <div class="modal-carrito">
+        </div>
+
+        <div class="detalleCarrito">
+            <img src="img/x-circle.svg" alt="close" id="close">
+
+            <div id ="carrito-contenedor">
+
+            </div>
+            <p class="precioProducto"><strong>Precio total: $<span id="precioTotal"></span></strong>
+            <br>
+            <br>
+                    <button id="seguir-compra" class="btn btn-secondary">SEGUIR COMPRANDO</button>
+                    <button id="vaciar-carrito" class="btn btn-secondary">VACIAR</button>
+                    <button id="finalizar-compra" class="btn btn-secondary">TERMINAR COMPRA</button>
             </p>
-        </article>
+
+        </div>
+
+
+
+
     </section>
 
 
@@ -46,10 +64,16 @@
 
 
 
-    
+
     <script src="app.js" type="module"></script>
     <script src="stock.js" type="module"></script>
     <script src="modal.js" type="module"></script>
+    <script src="carritoIndex.js" type ="module"></script>
+    <script src="getData.js" type ="module"></script>
+    <script src="finalizarCompra.js" type ="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
