--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <div id ="carrito-contenedor">
 
             </div>
-            <p class="precioProducto"><strong>Precio total: $<span id="precioTotal"></span></strong>
+            <p class="precioProducto"><strong><span id="precioTotal"></span></strong>
+            <!-- <p id="totalCarrito"></p> -->
             <br>
             <br>
                     <button id="seguir-compra" class="btn btn-secondary">SEGUIR COMPRANDO</button>
